# WinNativeSSH

./: .gitignore  CHANGELOG.md  CHANGELOG_ja.md  Cargo.toml  INSTALL.md  MANUAL.md  README.md  server.json.example  winnative.db
clients/vlt-ssh/: Cargo.toml
clients/vlt-ssh/src/: auth.rs  config.rs  forward.rs  main.rs  security.rs  shell.rs
scripts/: Add-WindowsDefenderDeployExclusion.ps1  Add-WindowsDefenderExclusion_Sample.ps1  Backup-WinNativeSSH.ps1  Deploy-And-Build-OnRemote.ps1  Enable-WSL.ps1  Enable-WinRM-RebootOnlyJEA.ps1  Export-AuditJsonl.ps1  Get-Nushell.ps1  Install-WinNativeSSH.ps1  Install-WinNativeSSHService.ps1  Restore-WinNativeSSH.ps1  Run-InteropSmoke.ps1  Setup-DefenderDebugExclusions.ps1  Start-WinNativeSSHService.ps1  Stop-WinNativeSSHService.ps1  Uninstall-WinNativeSSHService.ps1  Upgrade-WinNativeSSH.ps1  remote_rebuild_winnativessh.sh
src/: acl_diagnose.rs  audit_codes.rs  auth.rs  client_info.rs  core_syslog.rs  db.rs  dpapi.rs  eventlog.rs  lib.rs  protocol.rs  server.rs  sftp_handler.rs  shell.rs  vss.rs  worker_broker.rs
src/sbp/: handler.rs  mod.rs  protocol.rs
