[package]
name = "vlt-sshd"
version = "0.1.3"
edition = "2021"
authors = ["veltrea"]
 

[features]
default = ["sbp"]
sbp = []

[dependencies]
russh = "0.40"
russh-keys = "0.40"
russh-sftp = "2.1.1"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
simplelog = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
encoding_rs = "0.8"
async-trait = "0.1"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1.8", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
base64 = "0.22"
ipnet = "2.10"
hostname = "0.4"
futures = "0.3"

[target.'cfg(windows)'.dependencies]
encoding_rs = "0.8"
windows = { version = "0.56", features = ["Win32_Foundation", "Win32_Security", "Win32_System_Console", "Win32_System_Threading", "Win32_System_Pipes", "Win32_Security_Authorization", "Win32_Security_Cryptography", "Win32_System_Services", "Win32_Storage_FileSystem", "Win32_System_Memory", "Win32_System_Environment", "Win32_System_Diagnostics_ToolHelp", "Win32_System_ProcessStatus", "Win32_System_Registry", "Win32_NetworkManagement_IpHelper", "Win32_NetworkManagement_Ndis", "Win32_Networking_WinSock", "Win32_System_SystemInformation", "Win32_System_WindowsProgramming", "Win32_System_EventLog", "Win32_System_RemoteDesktop", "Win32_UI_Shell", "Win32_System_LibraryLoader", "Win32_System_SystemServices", "Win32_Globalization", "Win32_System_JobObjects"] }
windows-service = "0.7"

[[bin]]
name = "vlt-sshd"
path = "src/bin/sshd.rs"

[[bin]]
name = "vlt-worker"
path = "src/bin/worker.rs"

[workspace]
members = [
    ".",
    "clients/vlt-ssh",
]

[[bin]]
name = "vlt-admin"
path = "src/bin/vlt_admin.rs"
