[package]
name = "vlt-ssh"
version = "0.1.0"
edition = "2021"
authors = ["veltrea"]
description = "SBP (Structured Binary Protocol) Client for WinNativeSSH"

[dependencies]
ssh2 = "0.9"
clap = { version = "4.4", features = ["derive", "env"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rpassword = "7.4"
ssh2-config = "0.7"
crossterm = "0.27"
tokio = { version = "1", features = ["full"] }
libc = "0.2"
dirs = "5.0"
hex = "0.4"
base64 = "0.22"
keyring = "3.2"
aes-gcm = "0.10"
subtle = "2.5"
rand = "0.8"
ssh-key = { version = "0.6", features = ["alloc", "std", "ed25519", "crypto"] }
zeroize = { version = "1.8", features = ["derive"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
tss-esapi = "7.5"

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3.0"
